--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "categories": [
         "Snippets"
     ],
+    "repository": "https://github.com/yannklein/stimulusjs-snippets",
     "publisher": "yannklein",
     "contributes": {
         "snippets": [
